# goit-python-hw-22-jwt

./: .gitignore  README.md  main.py  pyproject.toml
migrations/versions/: 7570497ee07d_init.py
src/: schemas.py
src/database/: db.py  models.py
src/routes/: contacts.py
