[tool.poetry]
name = "hw12-jwt"
version = "0.1.0"
description = ""
authors = ["Anatolii6974 <anatolii.perfilov@gmail.com>"]
readme = "README.md"
packages = [{include = "hw12_jwt"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2 = "^2.9.9"
alembic = "^1.12.1"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs] 
in-project = true
